--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -79,11 +79,116 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <body>
 <div class='container'>
 <div class='left'>
-<p color:red;>Kidnapped: 128</p>
-<p color:black;>Murdered: 39</p>
-<p color:#FFD700;>Alive: 89</p>
+<p color:red;>Kidnapped: 124</p>
+<p color:black;>Murdered: 43</p>
+<p color:#FFD700;>Alive: 81</p>
 </div>
 <div class='right'>
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב">
+<figcaption>IgavBuhshtev<br>יגב בוכשטב</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
+<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
+<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
+<figcaption>DavidKonio<br>דוד קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
+<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
+<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
+<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
+<figcaption>shiri<br>שירי ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
+<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
+<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
+<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/Noaargmni.jpg" alt="נועה ארגמני">
+<figcaption>Noaargmni<br>נועה ארגמני</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
+</figure>
+
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/EdenJerusalem.jpg" alt="עדן ירושלמי">
 <figcaption>EdenJerusalem<br>עדן ירושלמי</figcaption>
@@ -125,8 +230,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il/2023/12/07/emily.png" alt="אמילי  דמארי">
-<figcaption>emily<br>אמילי  דמארי</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/12/07/emily.png" alt="אמילי דמארי">
+<figcaption>emily<br>אמילי דמארי</figcaption>
 </figure>
 
 <figure>
@@ -195,18 +300,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HananYvlonka.jpg" alt="חנן יבלונקה">
-<figcaption>HananYvlonka<br>חנן יבלונקה</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/HirshGoldberg.jpg" alt="הירש גולדברג פולין">
 <figcaption>HirshGoldberg<br>הירש גולדברג פולין</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MichelleNissenbaum.jpg" alt="מישל ניסנבאום">
-<figcaption>MichelleNissenbaum<br>מישל ניסנבאום</figcaption>
 </figure>
 
 <figure>
@@ -235,18 +330,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HaimPeri.jpg" alt="חיים פרי">
-<figcaption>HaimPeri<br>חיים פרי</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il/2023/11/26/idanalex.jpeg" alt="עידן אלכסנדר">
 <figcaption>idanalex<br>עידן אלכסנדר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OrionHernandezRado.jpg" alt="אוריון הרננדס ראדו">
-<figcaption>OrionHernandezRado<br>אוריון הרננדס ראדו</figcaption>
 </figure>
 
 <figure>
@@ -350,118 +435,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/IgavBuhshtev.jpg" alt="יגב בוכשטב">
-<figcaption>IgavBuhshtev<br>יגב בוכשטב</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
 <figcaption>TalShoham<br>טל שוהם</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר">
-<figcaption>YoramMetzger<br>יורם מצגר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArbelYehud.jpg" alt="ארבל יהוד">
-<figcaption>ArbelYehud<br>ארבל יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
-<figcaption>DavidKonio<br>דוד קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
-<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DolevYehud.jpg" alt="דולב יהוד">
-<figcaption>DolevYehud<br>דולב יהוד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
-<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OferCalderon.jpg" alt="עופר קלדרון">
-<figcaption>OferCalderon<br>עופר קלדרון</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/Noaargmni.jpg" alt="נועה ארגמני">
-<figcaption>Noaargmni<br>נועה ארגמני</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
-<figcaption>shiri<br>שירי ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
-<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
-<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
-<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
-<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק (יצחק) אלגרט">
-<figcaption>ItzikElgart<br>איציק (יצחק) אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AlexDanzig.jpg" alt="אלכס דנציג">
-<figcaption>AlexDanzig<br>אלכס דנציג</figcaption>
 </figure>
 
 <figure>
@@ -470,28 +445,13 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
+<figcaption>CarmelGat<br>כרמל גת</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול">
-<figcaption>NadavPoplewell<br>נדב פופלוול</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvrahamMondar.jpg" alt="אברהם מונדר">
+<figcaption>AvrahamMondar<br>אברהם מונדר</figcaption>
 </figure>
 
 <figure>
@@ -505,8 +465,13 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/CarmelGat.jpg" alt="כרמל גת">
-<figcaption>CarmelGat<br>כרמל גת</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
@@ -520,13 +485,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר">
-<figcaption>AmiramCooper<br>עמירם קופר</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
+<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
 </figure>
 
 <figure>
@@ -615,6 +575,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/YoramMetzger.jpg" alt="יורם מצגר ז"ל">
+<figcaption>YoramMetzger<br>יורם מצגר ז"ל</figcaption>
+</figure>
+
+<figure>
 <img class="dead" src="https://img.mako.co.il/2024/02/18/400_1802.png" alt="רס"ן דניאל פרץ ז"ל">
 <figcaption>400_1802<br>רס"ן דניאל פרץ ז"ל</figcaption>
 </figure>
@@ -627,6 +592,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2024/01/25/400X.png" alt="סמל עוז דניאל ז"ל">
 <figcaption>400X<br>סמל עוז דניאל ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/HaimPeri.jpg" alt="חיים פרי ז"ל">
+<figcaption>HaimPeri<br>חיים פרי ז"ל</figcaption>
 </figure>
 
 <figure>
@@ -645,8 +615,18 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/NadavPoplewell.jpg" alt="נדב פופלוול ז"ל">
+<figcaption>NadavPoplewell<br>נדב פופלוול ז"ל</figcaption>
+</figure>
+
+<figure>
 <img class="dead" src="https://img.mako.co.il/2023/11/05/YairJacob.jpg" alt="יאיר יעקב ז"ל">
 <figcaption>YairJacob<br>יאיר יעקב ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/AmiramCooper.jpg" alt="עמירם קופר ז"ל">
+<figcaption>AmiramCooper<br>עמירם קופר ז"ל</figcaption>
 </figure>
 
 <figure>
