--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -85,8 +85,28 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </div>
 <div class='right'>
 <figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
+<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+</figure>
+
+<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
 <figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
+<figcaption>KetSiegel<br>קית' סיגל</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
@@ -95,13 +115,73 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
-<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
-<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
+<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
+<figcaption>shiri<br>שירי ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
+<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
+<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
+<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
+<figcaption>GadiMozes<br>גדי מוזס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
+<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
+<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
+<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
+<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
+<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
 </figure>
 
 <figure>
@@ -120,43 +200,13 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefHamisZiadna.jpg" alt="יוסף חמיס אלזיאדנה">
+<figcaption>YosefHamisZiadna<br>יוסף חמיס אלזיאדנה</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadBenAmi.jpg" alt="אוהד בן עמי">
-<figcaption>OhadBenAmi<br>אוהד בן עמי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
-<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GadiMozes.jpg" alt="גדי מוזס">
-<figcaption>GadiMozes<br>גדי מוזס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/30/hishamabusid.jpg" alt="הישאם א-סייד">
-<figcaption>hishamabusid<br>הישאם א-סייד</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il///2023/11/30/averamangisto.jpg" alt="אברה מנגיסטו">
-<figcaption>averamangisto<br>אברה מנגיסטו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
-<figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/HamzaZiadna.jpg" alt="חמזה אלזיאדנה">
+<figcaption>HamzaZiadna<br>חמזה אלזיאדנה</figcaption>
 </figure>
 
 <figure>
@@ -280,11 +330,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="dead" src="https://img.mako.co.il//2023/11/05/OmarNautra.jpg" alt="סרן עומר נאוטרה ז"ל">
-<figcaption>OmarNautra<br>סרן עומר נאוטרה ז"ל</figcaption>
-</figure>
-
-<figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/EviatarDadid.jpg" alt="אביתר דוד">
 <figcaption>EviatarDadid<br>אביתר דוד</figcaption>
 </figure>
@@ -315,8 +360,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefOhana.jpg" alt="יוסף אוחנה">
-<figcaption>YosefOhana<br>יוסף אוחנה</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefOhana.jpg" alt="יוסף חיים אוחנה">
+<figcaption>YosefOhana<br>יוסף חיים אוחנה</figcaption>
 </figure>
 
 <figure>
@@ -357,56 +402,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
 <figcaption>ZivBerman<br>זיו ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YosefSharabi.jpg " alt="אלי שרעבי">
-<figcaption>YosefSharabi<br>אלי שרעבי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KetSiegel.jpg" alt="קית' סיגל">
-<figcaption>KetSiegel<br>קית' סיגל</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
-<figcaption>shiri<br>שירי ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
-<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
-<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/29/yardenbibas.jpg" alt="ירדן ביבס">
-<figcaption>yardenbibas<br>ירדן ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
 </figure>
 
 <figure>
@@ -507,6 +502,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2023/11/05/LiorRudaif.jpg" alt="ליאור רודאיף ז"ל">
 <figcaption>LiorRudaif<br>ליאור רודאיף ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/OmarNautra.jpg" alt="סרן עומר נאוטרה ז"ל">
+<figcaption>OmarNautra<br>סרן עומר נאוטרה ז"ל</figcaption>
 </figure>
 
 <figure>
