--- a/Python/kidnapped.html
+++ b/Python/kidnapped.html
@@ -80,18 +80,83 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <div class='container'>
 <div class='left'>
 <p color:red;>Kidnapped: 76</p>
-<p color:black;>Murdered: 34</p>
-<p color:#FFD700;>Alive: 42</p>
+<p color:black;>Murdered: 35</p>
+<p color:#FFD700;>Alive: 41</p>
 </div>
 <div class='right'>
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
+<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
+<figcaption>AvitanOr<br>אבינתן אור</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
+<figcaption>GaliBerman<br>גלי ברמן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
+<figcaption>ZivBerman<br>זיו ברמן</figcaption>
+</figure>
+
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/MatanTsengaukar.jpg" alt="מתן צנגאוקר">
 <figcaption>MatanTsengaukar<br>מתן צנגאוקר</figcaption>
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
-<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
+<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
+<figcaption>shiri<br>שירי ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
+<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
+<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
+<figcaption>TalShoham<br>טל שוהם</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
+<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
+<figcaption>YairHoren<br>יאיר הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
+<figcaption>EitanHoran<br>איתן הורן</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
+<figcaption>DavidKonio<br>דוד קוניו</figcaption>
+</figure>
+
+<figure>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
+<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
 </figure>
 
 <figure>
@@ -105,13 +170,8 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 </figure>
 
 <figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/DavidKonio.jpg" alt="דוד קוניו">
-<figcaption>DavidKonio<br>דוד קוניו</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielKonio.jpg" alt="אריאל קוניו">
-<figcaption>ArielKonio<br>אריאל קוניו</figcaption>
+<img class="alive" src="https://img.mako.co.il//2023/11/05/SashaTrupanov.jpg" alt="סשה (אלכסנדר) טרופנוב">
+<figcaption>SashaTrupanov<br>סשה (אלכסנדר) טרופנוב</figcaption>
 </figure>
 
 <figure>
@@ -157,11 +217,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il//2023/11/05/AliaCohen.jpg" alt="אליה כהן">
 <figcaption>AliaCohen<br>אליה כהן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ShlomoManzur.jpg" alt="שלמה מנצור">
-<figcaption>ShlomoManzur<br>שלמה מנצור</figcaption>
 </figure>
 
 <figure>
@@ -227,66 +282,6 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="alive" src="https://img.mako.co.il/2024/03/05/pintanatpong400.png" alt="פינטה נאטאפונג">
 <figcaption>pintanatpong400<br>פינטה נאטאפונג</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il/2023/11/26/shiri.jpeg" alt="שירי ביבס">
-<figcaption>shiri<br>שירי ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ArielBibs.jpg" alt="אריאל ביבס">
-<figcaption>ArielBibs<br>אריאל ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/KafirBiebs.jpg" alt="כפיר ביבס">
-<figcaption>KafirBiebs<br>כפיר ביבס</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/AvitanOr.jpg" alt="אבינתן אור">
-<figcaption>AvitanOr<br>אבינתן אור</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OdedLifshitz.jpg" alt="עודד ליפשיץ">
-<figcaption>OdedLifshitz<br>עודד ליפשיץ</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/OhadYaahalomi.jpg" alt="אוהד יהלומי">
-<figcaption>OhadYaahalomi<br>אוהד יהלומי</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/GaliBerman.jpg" alt="גלי ברמן">
-<figcaption>GaliBerman<br>גלי ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ZivBerman.jpg" alt="זיו ברמן">
-<figcaption>ZivBerman<br>זיו ברמן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/ItzikElgart.jpg" alt="איציק אלגרט">
-<figcaption>ItzikElgart<br>איציק אלגרט</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/YairHoren.jpg" alt="יאיר הורן">
-<figcaption>YairHoren<br>יאיר הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/EitanHoran.jpg" alt="איתן הורן">
-<figcaption>EitanHoran<br>איתן הורן</figcaption>
-</figure>
-
-<figure>
-<img class="alive" src="https://img.mako.co.il//2023/11/05/TalShoham.jpg" alt="טל שוהם">
-<figcaption>TalShoham<br>טל שוהם</figcaption>
 </figure>
 
 <figure>
@@ -367,6 +362,11 @@ box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
 <figure>
 <img class="dead" src="https://img.mako.co.il//2023/11/05/EdenShteoi.jpg" alt="עידן שתיוי ז"ל">
 <figcaption>EdenShteoi<br>עידן שתיוי ז"ל</figcaption>
+</figure>
+
+<figure>
+<img class="dead" src="https://img.mako.co.il//2023/11/05/ShlomoManzur.jpg" alt="שלמה מנצור ז"ל">
+<figcaption>ShlomoManzur<br>שלמה מנצור ז"ל</figcaption>
 </figure>
 
 <figure>
